--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 </head>
 <body>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur maxime reprehenderit dolor sequi facilis nostrum, voluptas minima, consequuntur asperiores a officiis. Sint dignissimos impedit molestiae illo. Ex, animi quas.</p>
 	<!-- section banner start -->
 	<div class="header_section">
 		<div class="container-fluid">
