--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                                 <a href="about.html">About</a>
                                 <a href="gallery.html">Gallery</a>
                                 <a href="contact.html">Contact</a>
+								<a href="unirrama.html">unir</a>
                               </div>
                             </div>
                              <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
